# opendal-demo-rust-is-slow

./: .gitignore  README.md  write_file.py
python-fs-read/: test.py
rust-opendal-fs-read/: Cargo.toml
rust-opendal-fs-read/src/: main.rs
rust-std-fs-read/: Cargo.toml
rust-std-fs-read/src/: main.rs
